Agregado botón de reservas por WhatsApp y actualización de redes

--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@
     </div>
   </div>
 </section>
+<!-- Botón flotante para reservas con Neocitas -->
+<a href="https://api.whatsapp.com/send?phone=5492215899532&text=Hola!%20Quiero%20reservar%20un%20turno%20con%20el%20código%20bem" 
+   class="btn btn-success position-fixed bottom-0 end-0 m-4 shadow rounded-pill d-flex align-items-center gap-2" 
+   style="z-index: 1050; padding: 10px 20px;">
+  <i class="fab fa-whatsapp fa-lg"></i>
+  <span>Reservar turno</span>
+</a>
 
  <!-- Footer -->
 <footer class="bg-dark text-white text-center py-4">
