Descripción de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -146,14 +146,15 @@
     <div class="col-md-4 col-sm-6" data-aos="fade-up">
       <div class="card border-0">
         <div class="profesor-box mx-auto">
-          <img src="img/Equipo-1.jpg" alt="Profesor 1" class="img-fluid">
+          <img src="img/walter-amaya.jpg" alt="Profesor 1" class="img-fluid">
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Profesor 1</h5>
-          <p class="card-text">Especialista en movimiento funcional.</p>
+         <div class="card-body">
+          <h5 class="card-title">Walter Amaya</h5>
+          <p class="card-text">Especialista en movimiento funcional, Bailarin e instructora de Pilates Reformer.
         </div>
       </div>
     </div>
+
 
     <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
       <div class="card border-0">
@@ -162,7 +163,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">Marcela Dibón</h5>
-          <p class="card-text">Profesora de Pilates Reformer y Stretching.</p>
+          <p class="card-text">Bailarina, Docente e instructora de Pilates Reformer y Stretching.</p>
         </div>
       </div>
     </div>
@@ -174,7 +175,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">Sol Aguiar</h5>
-          <p class="card-text">Entrenadora integral y motivadora del bienestar.</p>
+          <p class="card-text">Profesora de Ritmos Latinos, Pofesora de Yoga e instrutora de Pilates Reformer.</p>
         </div>
       </div>
     </div>
@@ -233,7 +234,7 @@
           <div class="invalid-feedback">Por favor escribí tu mensaje.</div>
         </div>
        
-          <div class="g-recaptcha" data-sitekey="6Lfjuz0rAAAAAN32qMzyoMFxwDDloZdodVuGTmLw"></div>
+          <div class="g-recaptcha" data-sitekey="6LeMWT8rAAAAADg3lEB3zw9tQOGFe8yQCbWD5CAA"></div>
 
         <button type="submit" class="btn btn-primary w-100">Enviar</button>
       </form>
